--- a/Frontend_React/src/components/div_collapse/collapseDiv.css
+++ b/Frontend_React/src/components/div_collapse/collapseDiv.css
@@ -1,6 +1,6 @@
 
 .__my-card {
-    background: rgba(212, 219, 213, 0.37);
+    background: rgb(255, 255, 255);
     padding: .75rem;
     border-radius: 0 0 5px 5px;
     margin: 0 .50rem .50rem .50rem;
