lass Component replaced  with functional based

--- a/Frontend_React/src/components/create_relation/css/mainTool.module.css
+++ b/Frontend_React/src/components/create_relation/css/mainTool.module.css
@@ -2,3 +2,13 @@
     background-color: #dcdbd9;
     min-height: 93.7vh;
 }
+
+.suggestion {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.fd-list {
+    /*padding-left: 0px;*/
+    padding-right: 0;
+}
