--- a/Frontend_React/src/assets/css/drawingTool.css
+++ b/Frontend_React/src/assets/css/drawingTool.css
@@ -1,3 +1,3 @@
-.drawing-tool-bg-color {
-    background-color: #f3f3f3;
-}
+/*.drawing-tool-bg-color {*/
+/*    background-color: #f3f3f3;*/
+/*}*/
