--- a/Frontend_React/src/components/div_collapse/collapseDiv.css
+++ b/Frontend_React/src/components/div_collapse/collapseDiv.css
@@ -3,13 +3,14 @@
     background: rgb(255, 255, 255);
     padding: .75rem;
     border-radius: 0 0 5px 5px;
-    margin: 0 .50rem .50rem .50rem;
+    margin: 0 .50rem .50rem 0;
+/*    Top right bottom left*/
 }
 
 .__card-collapse-header {
     /*background: #ffffff;*/
     border-radius: 5px 5px 0 0;
-    margin: 0 .50rem 0;
+    margin: 0 .50rem 0 0;
 }
 
 .__card-title {
