--- a/Frontend_React/src/components/create_relation/dependency_constraint/dependency_n_constraint.css
+++ b/Frontend_React/src/components/create_relation/dependency_constraint/dependency_n_constraint.css
@@ -3,3 +3,16 @@
     opacity: 0.5;
 }
 
+.__dependency-constraint {
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+    margin-bottom: .75rem;
+}
+
+.__dependency-constraint__header {
+    background-color: rgba(203, 202, 202, 0.61);
+}
+
+.__dependency-constraint__body {
+    /*min-height: 70vh;*/
+
+}
