--- a/Frontend_React/src/assets/css/SqlSchemaGenerator.css
+++ b/Frontend_React/src/assets/css/SqlSchemaGenerator.css
@@ -5,10 +5,12 @@
     border-radius: 5px;
     padding: 25px 10px 10px 10px;
 }
+
 .floating-input {
     height: 40px;
     margin-bottom: 10px;
 }
+
 /* --------------------------Input Fields & Labels---------------------------- */
 
 .inputFields {
@@ -55,7 +57,7 @@
     box-shadow: none;
 }
 
-.input-box{
+.input-box {
 
 }
 
@@ -93,7 +95,7 @@
     margin-right: 20px;
     border: 1px solid #3B666B;
     border-radius: 5px;
-    padding: 20px 10px 10px 25px;  /* top, right, bottom, left */
+    padding: 20px 10px 10px 25px; /* top, right, bottom, left */
     background-color: rgba(59, 102, 107, 0.15);
 }
 
@@ -113,4 +115,8 @@
     padding-bottom: 3px;
     /*border-bottom-color: #9C1A1C;*/
     background-color: rgba(225, 46, 48, 0.16);
+}
+
+.input_dataType {
+    width: 100%;
 }
