--- a/Frontend_React/src/components/full_page_loader/loader.css
+++ b/Frontend_React/src/components/full_page_loader/loader.css
@@ -71,5 +71,10 @@
 .loader {
     position: absolute;
     top: 45%;
-    left: 45%;
+    left: 48%;
+}
+.loader-text {
+    position: relative;
+    top: 42%;
+    left: -30%;
 }
