--- a/Frontend_React/src/assets/css/home.css
+++ b/Frontend_React/src/assets/css/home.css
@@ -19,3 +19,41 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.125);
     font-size:large ;
 }
+.usage-body {
+    padding: 1rem 1rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+    font-size:large ;
+}
+.home{
+    background-image: url("bg.jpg");
+    height: 91vh;
+    object-fit: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.intro-header{
+    background-color: white;
+    opacity: 0.7;
+    text-align: center;
+}
+.intro-body{
+    background-color: white;
+    opacity: 0.7;
+    height: 15vh;
+    text-align: center;
+}
+.usage-title{
+    background-color: white;
+    opacity: 0.7;
+    text-align: center;
+}
+.usage-body{
+    background-color: white;
+    opacity: 0.7;
+    height: 18vh;
+    text-align: center;
+}
+.proceedbtn{
+    background-color: white;
+    opacity: 0.7;
+}
