--- a/Frontend_React/src/assets/css/home.css
+++ b/Frontend_React/src/assets/css/home.css
@@ -34,24 +34,24 @@
 }
 .intro-header{
     background-color: white;
-    opacity: 0.7;
+    /*opacity: 0.7;*/
     text-align: center;
 }
 .intro-body{
     background-color: white;
-    opacity: 0.7;
-    height: 15vh;
+    /*opacity: 0.7;*/
+    /*height: 15vh;*/
     text-align: center;
 }
 .usage-title{
     background-color: white;
-    opacity: 0.7;
+    /*opacity: 0.7;*/
     text-align: center;
 }
 .usage-body{
     background-color: white;
-    opacity: 0.7;
-    height: 18vh;
+    /*opacity: 0.7;*/
+    /*height: 18vh;*/
     text-align: center;
 }
 .proceedbtn{
