--- a/Frontend_React/src/components/full_page_loader/loader.css
+++ b/Frontend_React/src/components/full_page_loader/loader.css
@@ -30,3 +30,14 @@
     top: 42%;
     /*left: %;*/
 }
+
+.general-loader {
+    position: absolute;
+    top: 45%;
+    left: 43%;
+}
+.general-loader-text {
+    position: relative;
+    /*top: 52%;*/
+    left: 10%;
+}
