--- a/Frontend_React/src/components/div_collapse/collapseDiv.css
+++ b/Frontend_React/src/components/div_collapse/collapseDiv.css
@@ -1,10 +1,17 @@
 
 .__my-card {
-    background: rgb(255, 255, 255);
     padding: .75rem;
     border-radius: 0 0 5px 5px;
     margin: 0 .50rem .50rem 0;
 /*    Top right bottom left*/
+}
+
+.body-white {
+    background: rgb(255, 255, 255);
+}
+
+.body-grey {
+    background: rgba(245, 241, 241, 0.8);
 }
 
 .__card-collapse-header {
